--- a/pagina.html
+++ b/pagina.html
@@ -1,6 +1,6 @@
 <HTML>
     <HEAD>
-        <TITLE>Título de la página</TITLE>
+        <TITLE>Título de la páginA</TITLE>
         ...
     </HEAD>
 
