agregando cosas nuevas al BODY

--- a/pagina.html
+++ b/pagina.html
@@ -5,9 +5,7 @@
     </HEAD>
 
     <BODY>
-        Aquí iría el contenido de la página
-        hola
-        A
-        N
+El término de puertos púnicos de Cartago sirve para designar a los antiguos puertos de la ciudad de 
+Cartago que estuvieron en funcionamiento durante la Antigüedad.
     </BODY>
 </HTML>
