--- a/pagina.html
+++ b/pagina.html
@@ -6,6 +6,6 @@
 
     <BODY>
 El término de puertos púnicos de Cartago sirve para designar a los antiguos puertos de la ciudad de 
-Cartago que estuvieron en funcionamiento durante la Antigüedad
+Cartago que estuvieron en funcionamiento durante la Antigüedad;
     </BODY>
 </HTML>
