--- a/pagina.html
+++ b/pagina.html
@@ -5,7 +5,7 @@
     </HEAD>
 
     <BODY>
-El término de puertos púnicos de Cartago sirve para designar a los antiguos puertos de la ciudad de 
+El términoo de puertos púnicos de Cartago sirve para designar a los antiguos puertos de la ciudad de 
 Cartago que estuvieron en funcionamiento durante la Antigüedad.
     </BODY>
 </HTML>
