--- a/pagina2.html
+++ b/pagina2.html
@@ -6,7 +6,7 @@
       el comando stash original, se pueden volver a aplicar los últimos cambios recien guardados. Si lo que
        se desea es reaplicar alguno de los grupos más antiguos de cambios, se ha de indicar expresamente: git
         stash apply stash@{2} Si no se indica ningún grupo concreto, Git asume que se desea reaplicar el grupo 
-        de cambios más reciente de entre los guardados en la pila.
+        de cambios más reciente de entre los guardados en la pila
         qwerty
         <TITLE>Título de la páginA</TITLE>
         ...
