--- a/pagina.html
+++ b/pagina.html
@@ -1,7 +1,7 @@
 <HTML>
     <HEAD>
           En est
-     e ejemplo, se habian realizado dos guardados rápidos anteriores, por lo que se ven tres grupos de
+     e ejemplo, se habia realizado dos guardados rápidos anteriores, por lo que se ven tres grupos de
       cambios guardados en la pila. Con el comando 'git stash apply', tal y como se indica en la salida d
       el comando stash original, se pueden volver a aplicar los últimos cambios recien guardados. Si lo que
        se desea es reaplicar alguno de los grupos más antiguos de cambios, se ha de indicar expresamente: git
@@ -13,7 +13,7 @@
 
     <BODY>
      En est
-     e ejemplo, se habian realizado dos guardados rápidos anteriores, por lo que se ven tres grupos de
+     e ejemplo, se habian realizad dos guardados rápidos anteriores, por lo que se ven tres grupos de
       cambios guardados en la pila. Con el comando 'git stash apply', tal y como se indica en la salida d
       el comando stash original, se pueden volver a aplicar los últimos cambios recien guardados. Si lo que
        se desea es reaplicar alguno de los grupos más antiguos de cambios, se ha de indicar expresamente: git
